# kmboxAI

./: ReadMe.txt  clean_build.sh  env.txt
00-hellow_world/: CMakeLists.txt  main.cpp
01-keyboard_test/: CMakeLists.txt  main.cpp
01-kmAI_kmEnable/: main.cpp
02-keyboard_test/: main.cpp
02-mouse_test/: CMakeLists.txt  main.cpp
03-mouse_test/: main.cpp
04-opencv-test/: example.cpp
05-opencv-video/: example.cpp  my_timer.h
06-opencv-RTVideo/: example.cpp
07-opencv-find/: example.cpp
08-yolovx-test/: CMakeLists.txt  example.cpp
08-yolovx-test/output/: yolov10.rknn
09-myYOLO-test/: example.cpp
09-myYOLO-test/output/: 06_myYOLO_test
09-myYOLO-test/tools/: convert.py
09-myYOLO-train/: README.md  README_cn.md  kmbox.py
09-myYOLO-train/data/: kmbox.yaml
09-myYOLO-train/data/images/: Thumbs.db
09-myYOLO-train/data/kmbox/annotations/: instances_val.json
09-myYOLO-train/data/kmbox/images/: .train.json  .val.json
09-myYOLO-train/data/kmbox/images/train/: Thumbs.db
09-myYOLO-train/data/kmbox/labels/train/: hard_hat_workers0.txt  hard_hat_workers1.txt  hard_hat_workers10.txt  hard_hat_workers100.txt  hard_hat_workers101.txt  hard_hat_workers102.txt  hard_hat_workers103.txt  hard_hat_workers104.txt  hard_hat_workers105.txt  hard_hat_workers106.txt  hard_hat_workers107.txt  hard_hat_workers108.txt  hard_hat_workers109.txt  hard_hat_workers11.txt  hard_hat_workers110.txt  hard_hat_workers111.txt  hard_hat_workers112.txt  hard_hat_workers113.txt  hard_hat_workers114.txt  hard_hat_workers115.txt  hard_hat_workers116.txt  hard_hat_workers117.txt  hard_hat_workers118.txt  hard_hat_workers119.txt  hard_hat_workers12.txt  hard_hat_workers120.txt  hard_hat_workers121.txt  hard_hat_workers122.txt  hard_hat_workers123.txt  hard_hat_workers124.txt  hard_hat_workers125.txt  hard_hat_workers126.txt  hard_hat_workers127.txt  hard_hat_workers128.txt  hard_hat_workers129.txt  hard_hat_workers13.txt  hard_hat_workers130.txt  hard_hat_workers131.txt  (+962 more)
09-myYOLO-train/deploy/RKNN/: RKOPT_README.md  RKOPT_README_cn.md  export_onnx_for_rknn.py
09-myYOLO-train/tools/: infer.py
09-myYOLO-train/yolov6/models/: effidehead.py
09-myYOLO-train/yolov6/models/heads/: effidehead_distill_ns.py
10-tcp-server/: 编译方法.txt
11-ui-test/: CMakeLists.txt  main.cpp
11-ui-test/output/: 03_ui_test
kmbox-ai-rust/: Cargo.toml  README.md
kmbox-ai-rust/src/: kmbox_ai.rs  rknn.rs  vision.rs  yolo.rs
kmbox-ai-rust/src/bindings/: common.h.rs
kmbox-rust-bindings/: build.rs
kmbox-rust-bindings/examples/: keyboard_example.rs
kmbox-rust-bindings/src/: error.rs  keyboard.rs  lib.rs  rknn.rs
kmbox-rust-bindings/src/bindings/: KeyboardTable.h.rs  kmboxAI.h.rs  kmboxYOLO.h.rs  kmbox_rknn_api.h.rs
kmbox_libs/: README.txt
kmbox_libs/include/kmboxAIlib/: KeyboardTable.h  common.h  kmboxAI.h  kmboxYOLO.h  kmbox_rknn_api.h
(+330 files in other folders)
